...
                                <segments>
                                    <segment title="One Data Type"/>
                                    <segment title="Two Data Types"/>
                                </segments>
                                <connections>
...
                                <rect key="frame" x="46" y="270" width="284" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" hint="Choose the query to use for the y-axis (optional)" identifier="choose y-axis query button" label="choose y-axis query button"/>
                                <state key="normal" title="Choose query (optional)"/>
                                <connections>
...
                                <rect key="frame" x="16" y="308" width="343" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="choose y-axis information button" label="choose y-axis information button"/>
                                <state key="normal" title="Choose information"/>
                                <connections>
...
                                <rect key="frame" x="46" y="91" width="284" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" hint="Choose the query to use for the x-axis (optional)" identifier="choose x-axis query button" label="choose x-axis query button"/>
                                <state key="normal" title="Choose query (optional)"/>
                                <connections>
...
                                <rect key="frame" x="16" y="129" width="343" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="choose x-axis information button" label="choose x-axis information button"/>
                                <state key="normal" title="Choose information"/>
                                <connections>
...
                                <rect key="frame" x="16" y="278" width="22" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear y-axis query button" label="clear y-axis query button"/>
                                <state key="normal" title="X"/>
                                <connections>
...
                                <rect key="frame" x="16" y="95" width="22" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear x-axis query button" label="clear x-axis query button"/>
                                <state key="normal" title="X"/>
                                <connections>
...
                                <rect key="frame" x="45" y="364" width="284" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="choose series grouping button" label="choose series grouping button"/>
                                <state key="normal" title="Choose series grouping"/>
                                <connections>
...
                                <rect key="frame" x="15" y="368" width="22" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear query button" label="clear query button"/>
                                <state key="normal" title="X"/>
                                <connections>
...
                                </barButtonItem>
                                <barButtonItem style="plain" systemItem="flexibleSpace" id="rQP-tG-DUJ"/>
                                <barButtonItem title="Clear" id="y2c-fI-ybP">
                                    <connections>
                                        <action selector="clearButtonPressed:" destination="FBF-3k-koa" id="Bo2-l5-iLm"/>
...
                                </barButtonItem>
                                <barButtonItem style="plain" systemItem="flexibleSpace" id="pBQ-cM-vlR"/>
                                <barButtonItem title="Done" id="rVb-q8-vkS">
                                    <connections>
                                        <action selector="doneButtonPressed:" destination="FBF-3k-koa" id="Ht8-9I-nQ1"/>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="save x-axis button" label="save x-axis button"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                                <rect key="frame" x="45" y="228" width="284" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="choose point grouping button" label="choose point grouping button"/>
                                <state key="normal" title="Choose point grouping (optional)"/>
                                <connections>
...
                                <rect key="frame" x="46" y="266" width="282" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" hint="Choose the query to use (optional)" identifier="choose query button" label="choose query button"/>
                                <state key="normal" title="Choose query (optional)"/>
                                <connections>
...
