...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YGV-q5-brL">
                                <rect key="frame" x="118" y="20" width="241" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="select graph type button" label="select graph type button"/>
                                <state key="normal" title="Line"/>
                                <connections>
                                    <action selector="setGraphTypewButtonPressedWithSender:" destination="BIZ-9L-D8b" eventType="touchUpInside" id="I5H-rb-QKz"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Graph Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MT0-L0-0RP">
...
                                </accessibility>
                            </pickerView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kIx-wZ-KwT">
                                <rect key="frame" x="0.0" y="155" width="300" height="45"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="save graph type button" label="save graph type button"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                </state>
                                <connections>
                                    <action selector="acceptButtonPressedWithSender:" destination="aVV-b1-BAQ" eventType="touchUpInside" id="Y8e-VZ-Kq6"/>
...
