...
			fromStoryboard: "AttributeList"
		)
		controller.currentValue = currentGrouper
		controller.possibleValues = availableGroupers
		controller.notificationToSendWhenAccepted = notificationToObserve
		controller.pickerAccessibilityIdentifier = "grouper picker"
		controller.saveButtonAccessibilityIdentifier = "save grouper button"

		view.addSubview(controller.view)
		controller.didMove(toParent: self)
		NSLayoutConstraint.activate([
			controller.view.topAnchor.constraint(equalTo: view.topAnchor),
			controller.view.bottomAnchor.constraint(equalTo: view.bottomAnchor),
...
